--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 							</div>
 
 							<br><br>
-							<!-- Adminisration -->
+							<!-- Administration -->
 							<div class="title">
-								<div class="title_inner">Adminisration</div>
+								<div class="title_inner">Administration</div>
 							</div>
 							<div class="resume-items">
 								<div class="resume-item">
