--- a/index.html
+++ b/index.html
@@ -605,6 +605,36 @@
 
 						<div class="box-item f-links">
 							<div class="image">
+								<a href="https://www.cybrary.it/members/thehackingsage/" class="has-popup-link" target="_blank">
+									<img src="images/activity/cybrary.png" alt="" />
+									<span class="info">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="ion ion-link"></span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+						</div>
+
+						<div class="box-item f-links">
+							<div class="image">
+								<a href="https://www.udemy.com/user/vipul-tiwari-5/" class="has-popup-link" target="_blank">
+									<img src="images/activity/udemy.png" alt="" />
+									<span class="info">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="ion ion-link"></span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+						</div>
+
+						<div class="box-item f-links">
+							<div class="image">
 								<a href="https://thehacktronian.blogspot.com" class="has-popup-link" target="_blank">
 									<img src="images/activity/blogger.png" alt="" />
 									<span class="info">
