--- a/index.html
+++ b/index.html
@@ -278,10 +278,37 @@
 							<div class="resume-items">
 
 								<div class="resume-item">
-									<div class="date">2019</div>
+									<div class="date">2019-2020</div>
+									<div class="name">Penetration Testing and Ethical Hacking</div>
+									<div class="name">Advanced Penetration Testing</div>
+									<div class="name">Social Engineering and Manipulation</div>
+									<div class="name">CompTIA Network+</div>
+									<div class="name">CompTIA A Plus 901</div>
+									<div class="name">CompTIA Security Plus</div>
 									<div class="name">CompTIA Cybersecurity Analyst (CySA+)</div>
 									<p>
 										Cybrary
+									</p>
+								</div>
+
+								<div class="resume-item">
+									<div class="date">2019-2020</div>
+									<div class="name">Hacking and Pentesting iOS Applications</div>
+									<div class="name">Step by Step Guide to Machine Learning</div>
+									<div class="name">Python Hacking Course - Beginner to Advanced</div>
+									<div class="name">A Hands-On Approach to Ethical Hacking</div>
+									<div class="name">Cryptography Ethical Hacking</div>
+									<div class="name">AWS Certified Cloud Practitioner</div>
+									<div class="name">DevOps Fundamentals</div>
+									<div class="name">Master Wireshark 3</div>
+									<div class="name">BlackArch Linux: Ethical Hacking & Pentesting</div>
+									<div class="name">Powershell Scripting</div>
+									<div class="name">Learning Task Automation using Windows PowerShell</div>
+									<div class="name">Learning Unity c# scripting</div>
+									<div class="name">The Complete Android App Development</div>
+									<div class="name">Social Media Marketing</div>
+									<p>
+										Udemy
 									</p>
 								</div>
 
@@ -290,54 +317,6 @@
 									<div class="name">Fundamentals of Digital Marketing</div>
 									<p>
 										Google
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">CompTIA Security Plus</div>
-									<p>
-										Cybrary
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">CompTIA A Plus 901</div>
-									<p>
-										Cybrary
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">CompTIA Network+</div>
-									<p>
-										Cybrary
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">Social Engineering and Manipulation</div>
-									<p>
-										Cybrary
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">Advanced Penetration Testing</div>
-									<p>
-										Cybrary
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">Penetration Testing and Ethical Hacking</div>
-									<p>
-										Cybrary
 									</p>
 								</div>
 
