--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
 									<div class="date">2019-2020</div>
 									<div class="name">Penetration Testing and Ethical Hacking</div>
 									<div class="name">Advanced Penetration Testing</div>
+									<div class="name">Risk Management Framework</div>
 									<div class="name">Social Engineering and Manipulation</div>
 									<div class="name">CompTIA Network+</div>
 									<div class="name">CompTIA A Plus 901</div>
