--- a/index.html
+++ b/index.html
@@ -228,29 +228,20 @@
 								<div class="title_inner">Experience</div>
 							</div>							
 							<div class="resume-items">
+
+								<div class="resume-item active">
+									<div class="date">2019 - Present</div>
+									<div class="name">SECARMY - <a href="https://secarmy.org" target="_blank">https://secarmy.org</a></div>
+									<p>Head of Operations & Projects</p>
+
+								</div>
+
 								<div class="resume-item active">
 									<div class="date">2016 - Present</div>
-									<div class="name">Cyber Security & Web Development</div>
-									<p>In 2016, I started working as a Freelancer in which I used to provide services related to Cyber Security, Web Designing & Web Development.</p><br>
-									<p>Cyber Security Services :</p><br>
-										<ul>
-											<li>• Vulnerability Assessment</li>
-											<li>• Penetration Testing</li>
-											<li>• Web App Security Testing</li>
-											<li>• Network Security Testing</li>
-											<li>• Wireless Network Assessment</li>
-											<li>• Mobile App Security Assessment</li>
-											<li>• Cyber Security Training and Workshop</li>
-										</ul><br>
-										<p>Web Designing & Web Development :</p><br>
-										<ul>
-											<li>• Website Designing</li>
-											<li>• Static/Dynamic Web Designing</li>
-											<li>• Makeover / Re-Design</li>
-											<li>• Search Engine Optimization</li>
-										</ul>
-									</p>
+									<div class="name">Freelancer</div>
+									<p>In 2016, I started working as a Freelancer in which I used to provide services related to Cyber Security (Security Audit, Vulnerability Assessment and Penetration Testing) & Web Development (Web Designing, Makeover and SEO).</p>
 								</div>
+
 							</div>
 
 							<br><br>
@@ -259,6 +250,7 @@
 								<div class="title_inner">Education</div>
 							</div>
 							<div class="resume-items">
+
 								<div class="resume-item">
 									<div class="date">2013 - 2016</div>
 									<div class="name">B.Sc. Mathematics</div>
@@ -266,6 +258,7 @@
 										Dr. Ram Manohar Lohia Avadh University
 									</p>
 								</div>
+
 							</div>					
 
 						</div>
