--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
 	<!-- Basic -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Mr.SAGE</title>
-	<meta name="description" content="Cyber Security Researcher">
-	<meta name="keywords" content="Mr.SAGE">
+	<meta name="keywords" content="thehackingsage, Mr.SAGE, Hacktronian, Vipul Tiwari, Cyber Security, Training, Projects, Services"/>
+    <meta name="description" content="Security Enthusiast / Pentester / Developer"/>
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thehackingsage.github.io">
+    <meta property="og:title" content="Mr.SAGE">
+    <meta property="og:description" content="Security Enthusiast / Pentester / Developer">
+    <meta property="og:image" content="images/metadata.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thehackingsage.github.io">
+    <meta property="twitter:title" content="Mr.SAGE">
+    <meta property="twitter:description" content="Security Enthusiast / Pentester / Developer">
+    <meta property="twitter:image" content="images/metadata.png">
 	
 	<!-- Mobile Specific Metas -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -24,7 +36,7 @@
 	<link rel="stylesheet" href="css/green.css" />
 	
 	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	
 </head>
 
@@ -35,7 +47,7 @@
 		<div class="centrize full-width">
 			<div class="vertical-center">
 				<div class="pre-inner">
-					<div class="load typing-load"><p>loading...</p></div>
+					<div class="load typing-load"><p>>_ Loading...</p></div>
 					<span class="typed-load"></span>
 				</div>
 			</div>
@@ -52,10 +64,11 @@
 				<div class="top-menu">
 					<ul>
 						<li><a href="#section-home" class="lnk">Home</a></li>
+						<li><a href="#section-about" class="lnk">About</a></li>
 						<li><a href="#section-resume" class="lnk">Resume</a></li>
 						<li><a href="#section-projects" class="lnk">Projects</a></li>
 						<li><a href="#section-contacts" class="lnk">Contacts</a></li>
-						<li><a href="terminal/index.html" class="btn" data-text=">_ Terminal">>_ Terminal</a></li>
+						<li><a href="https://hacktronian.in" target="_blank" class="btn" data-text=">_ HACKTRONIAN">>_ HACKTRONIAN</a></li>
 					</ul>
 				</div>
 			</div>
@@ -70,24 +83,28 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<div class="h-title glitch-effect" data-text="Mr.SAGE"><span>Mr.SAGE</span></div>
+							<div class="h-subtitle typing-bread">
+								<p>root@linux:~$ <a href="terminal/index.html">ssh guest@hacktronian</a></p>
+								<!-- NO, THIS IS NOT REAL SSH CONNECTION -->
+							</div>
 						</div>
 					</div>
 				</div>
 				<a href="#" class="mouse_btn"><span class="ion ion-mouse"></span></a>
 			</div>
 
-			<!-- About -->
-			<div class="section about" id="section-resume">
+			<!-- About Me -->
+			<div class="section about" id="section-about">
 				<div class="content">
 					<div class="title">
 						<div class="title_inner">About Me</div>
 					</div>
 					<div class="image">
-						<img src="images/mr.sage.jpg" alt="" />
+						<img src="images/mr.sage.jpg" alt=""/>
 					</div>
 					<div class="desc">
 						<p>
-							Hello, My name is Vipul and I'm a Cyber Security Researcher and Certified Ethical Hacker with an effective problem-solving mindset and a lifelong passion for cybersecurity and technology, I'm part of cybersecurity domain from last 6 years and have a great experience in different fields of information security such as penetration testing, security analysis, red teaming and social engineering. I have been entrusted for handling the Vulnerability Assessment & Penetration Testing activities for the organization as well as of client projects.
+							Hello, My name is Vipul and I'm a Cyber Security Researcher and Certified Ethical Hacker with an effective problem-solving mindset and a lifelong passion for cybersecurity and technology, I'm part of cybersecurity domain from last 4 years and have a great experience in different fields of information security such as penetration testing, security analysis, red teaming and social engineering. I have been entrusted for handling the Vulnerability Assessment & Penetration Testing activities for the organization as well as of client projects.
 						</p>
 						<div class="info-list">
 							<ul>
@@ -96,6 +113,7 @@
 								<li><strong>Job:</strong> Penetration Tester</li>
 								<li><strong>Citizenship:</strong> India</li>
 								<li><strong>Residence: </strong> Delhi</li>
+								<li><strong>Follow: </strong><a href="https://allmylinks.com/thehackingsage">https://allmylinks.com</a></li>
 							</ul>
 						</div>
 						<div class="bts"><a href="#" class="btn" data-text="Download CV">Download CV</a></div>
@@ -104,8 +122,32 @@
 				</div>
 			</div>
 
+			<!-- About Hacktronian -->
+			<div class="section about">
+				<div class="content">
+					<div class="title">
+						<div class="title_inner">About Hacktronian</div>
+					</div>
+					<div class="image">
+						<img src="images/hacktronian.png" alt="" />
+					</div>
+					<div class="desc">
+						<p>
+							Hacktronian is an online training platform which mainly focuses on providing cybersecurity education and resources for free. We also provide cybersecurity services and solutions.
+						</p>
+						<div class="info-list">
+							<ul>
+								<li><strong>Website: </strong><a href="https://hacktronian.in">https://hacktronian.in</a></li>
+								<li><strong>Follow: </strong><a href="https://allmylinks.com/hacktronian">https://allmylinks.com</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="clear"></div>
+				</div>
+			</div>
+
 			<!-- Service -->
-			<div class="section service">
+			<div class="section service" id="section-services">
 				<div class="content">
 					<div class="title">
 						<div class="title_inner">My Services</div>
@@ -138,91 +180,14 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<!-- Resume -->
-			<div class="section resume">
+			<div class="section resume" id="section-resume">
 				<div class="content">
 					<div class="cols">
 						<div class="col col-md">	
 
-							<!-- Skills -->	
-							<div class="title">
-								<div class="title_inner">Skills</div>
-							</div>
-							<div class="resume-items">
-								<div class="resume-item">
-									<p>
-										Penetration Testing, Linux Administration, Network Administration, Web Development
-									</p>
-								</div>
-							</div>
-
-							<br><br>
-							<!-- Languages -->
-							<div class="title">
-								<div class="title_inner">Languages</div>
-							</div>
-							<div class="resume-items">
-								<div class="resume-item">
-									<p>
-										HTML, C, Python, Bash, PowerShell, PHP
-									</p>
-								</div>
-							</div>
-
-							<br><br>
-							<!-- Database -->
-							<div class="title">
-								<div class="title_inner">Database</div>
-							</div>
-							<div class="resume-items">
-								<div class="resume-item">
-									<p>
-										MySQL, SQLite, Microsoft SQL Server
-									</p>
-								</div>
-							</div>
-
-							<br><br>
-							<!-- Administration -->
-							<div class="title">
-								<div class="title_inner">Administration</div>
-							</div>
-							<div class="resume-items">
-								<div class="resume-item">
-									<p>
-										Apache, SSH, Shell, GIT, Virtualization
-									</p>
-								</div>
-							</div>
-
-							<br><br>
-							<!-- OS -->
-							<div class="title">
-								<div class="title_inner">Operating System</div>
-							</div>
-							<div class="resume-items">
-								<div class="resume-item">
-									<p>
-										Linux & Windows
-									</p>
-								</div>
-							</div>
-
-							<br><br>
-							<!-- Tools -->
-							<div class="title">
-								<div class="title_inner">Tools</div>
-							</div>
-							<div class="resume-items">
-								<div class="resume-item">
-									<p>
-										Nmap, Wireshark, Metasploit Framework, BurpSuite
-									</p>
-								</div>
-							</div>
-
-							<br><br>
+							
 							<!-- Experience -->
 							<div class="title">
 								<div class="title_inner">Experience</div>
@@ -230,26 +195,61 @@
 							<div class="resume-items">
 
 								<div class="resume-item active">
-									<div class="date">2019 - Present</div>
-									<div class="name">SECARMY - <a href="https://secarmy.org" target="_blank">https://secarmy.org</a></div>
+									<div class="date">Oct. 2020 - Present</div>
+									<div class="name">Hacktronian | <a href="https://hacktronian.in" target="_blank">https://hacktronian.in</a></div>
+									<p>Cyber Security Resources and Training</p>
+
+								</div>
+
+								<div class="resume-item active">
+									<div class="date">Jan. 2019 - Oct. 2020</div>
+									<div class="name">SECARMY (InfoSec Community) | <a href="https://secarmy.org" target="_blank">https://secarmy.org</a></div>
 									<p>Head of Operations & Projects</p>
 
 								</div>
 
 								<div class="resume-item active">
-									<div class="date">2016 - Present</div>
-									<div class="name">Freelancer</div>
+									<div class="date">Oct. 2016 - Present</div>
+									<div class="name">Freelancer | <a href="https://allmylinks.com/thehackingsage" target="_blank">https://allmylinks.com</a></div>
 									<p>In 2016, I started working as a Freelancer in which I used to provide services related to Cyber Security (Security Audit, Vulnerability Assessment and Penetration Testing) & Web Development (Web Designing, Makeover and SEO).</p>
 								</div>
 
 							</div>
 
-							<br><br>
-							<!-- Education -->	
+						</div>
+
+						<!-- Education / Certification -->
+						<div class="col col-md">
 							<div class="title">
-								<div class="title_inner">Education</div>
+								<div class="title_inner">Education / Certification</div>
 							</div>
 							<div class="resume-items">
+
+						   <!-- <div class="resume-item">
+									<div class="date">Jan. 2021</div>
+									<div class="name">Offensive Security Certified Professional (OSCP)</div>
+									<p>
+										Offensive Security (ID : XXX)
+									</p>
+
+								</div> -->
+
+								<div class="resume-item">
+									<div class="date">Oct. 2018 - Oct. 2021</div>
+									<div class="name">Certified Ethical Hacker v10</div>
+									<p>
+										EC-Council (ID : ECC1635847029)
+									</p>
+
+								</div>
+
+								<div class="resume-item">
+									<div class="date">2017 - Present</div>
+									<div class="name">100+ Online Courses and Certifications</div>
+									<p>
+										Cybrary, Udemy, Google etc.
+									</p>
+								</div>
 
 								<div class="resume-item">
 									<div class="date">2013 - 2016</div>
@@ -259,73 +259,52 @@
 									</p>
 								</div>
 
-							</div>					
-
-						</div>
-
-						<!-- Certification -->
-						<div class="col col-md">
-							<div class="title">
-								<div class="title_inner">Certification</div>
-							</div>
-							<div class="resume-items">
-
-								<div class="resume-item">
-									<div class="date">2019-2020</div>
-									<div class="name">Penetration Testing and Ethical Hacking</div>
-									<div class="name">Advanced Penetration Testing</div>
-									<div class="name">Risk Management Framework</div>
-									<div class="name">Social Engineering and Manipulation</div>
-									<div class="name">CompTIA Network+</div>
-									<div class="name">CompTIA A Plus 901</div>
-									<div class="name">CompTIA Security Plus</div>
-									<div class="name">CompTIA Cybersecurity Analyst (CySA+)</div>
-									<p>
-										Cybrary
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019-2020</div>
-									<div class="name">Hacking and Pentesting iOS Applications</div>
-									<div class="name">Step by Step Guide to Machine Learning</div>
-									<div class="name">Python Hacking Course - Beginner to Advanced</div>
-									<div class="name">A Hands-On Approach to Ethical Hacking</div>
-									<div class="name">Cryptography Ethical Hacking</div>
-									<div class="name">AWS Certified Cloud Practitioner</div>
-									<div class="name">DevOps Fundamentals</div>
-									<div class="name">Master Wireshark 3</div>
-									<div class="name">BlackArch Linux: Ethical Hacking & Pentesting</div>
-									<div class="name">Powershell Scripting</div>
-									<div class="name">Learning Task Automation using Windows PowerShell</div>
-									<div class="name">Learning Unity c# scripting</div>
-									<div class="name">The Complete Android App Development</div>
-									<div class="name">Social Media Marketing</div>
-									<p>
-										Udemy
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2019</div>
-									<div class="name">Fundamentals of Digital Marketing</div>
-									<p>
-										Google
-									</p>
-								</div>
-
-								<div class="resume-item">
-									<div class="date">2018</div>
-									<div class="name">Certified Ethical Hacker v10</div>
-									<p>
-										EC-Council (ID : ECC1635847029)
-									</p>
-
-								</div>
-
 							</div>
 						</div>						
 
+					</div>
+				</div>
+			</div>
+
+			<!-- Skills -->
+			<div class="section skills">
+				<div class="content">
+					<div class="title">
+						<div class="title_inner">Skills</div>
+					</div>
+					<div class="skills list">
+						<ul>
+							<li> 
+								<div class="name">Penetration Testing</div>
+							</li>
+							<li> 
+								<div class="name">Linux Administration</div>
+							</li>
+							<li> 
+								<div class="name">Network Administration</div>
+							</li>
+							<li> 
+								<div class="name">Web Development</div>
+							</li>
+							<li> 
+								<div class="name">Language : Hindi, English</div>
+							</li>
+							<li> 
+								<div class="name">Coding : HTML, C, Python, Bash, PowerShell, PHP</div>
+							</li>
+							<li> 
+								<div class="name">Database : MySQL, SQLite, Microsoft SQL Server</div>
+							</li>
+							<li> 
+								<div class="name">Administration : Apache, SSH, Shell, GIT, Virtualization</div>
+							</li>
+							<li> 
+								<div class="name">Operating System : Linux & Windows</div>
+							</li>
+							<li> 
+								<div class="name">Tools : Nmap, Wireshark, Metasploit Framework, BurpSuite, </div>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -334,7 +313,7 @@
 			<div class="section works" id="section-projects">
 				<div class="content">
 					<div class="title">
-						<div class="title_inner">Recent Projects</div>
+						<div class="title_inner">My Projects</div>
 					</div>
 
 					<div class="box-items portfolio-items">	
@@ -660,7 +639,7 @@
 							<div class="icon"><span class="ion ion-email"></span></div>
 							<div class="name">Email</div>
 							<p>
-								<a href="mailto:thehackingsage@protonmail.com">thehackingsage@protonmail.com</a>
+								<a href="mailto:hacktronian@gmail.com">thehackingsage@protonmail.com</a>
 							</p>
 						</div>
 						<div class="service-item">
@@ -685,10 +664,29 @@
 							</p>
 						</div>
 						<div class="service-item">
-							<div class="icon"><span class="ion ion-paper-airplane"></span></div>
-							<div class="name">Telegram</div>
+							<div class="icon"><span class="ion ion-android-globe"></span></div>
+							<div class="name">All My Links</div>
 							<p>
-								<a href="https://t.me/thehackingsage" target="_blank">@thehackingsage</a>
+								<a href="https://allmylinks.com/thehackingsage" target="_blank">@thehackingsage</a>
+							</p>
+						</div>
+					</div>					
+					<div class="contact_form">
+						<form id="cform" method="post">
+							<div class="group-val">
+								<input type="text" name="name" placeholder="Name" />
+							</div>
+							<div class="group-val">
+								<input type="text" name="email" placeholder="Email" />
+							</div>
+							<div class="group-val ct-gr">
+								<textarea name="message" placeholder="Message"></textarea>
+							</div>
+							<a href="#" class="btn fill" onclick="$('#cform').submit(); return false;" data-text="Send Message">Send Message</a>
+						</form>
+						<div class="alert-success">
+							<p>
+								Thanks, your message is sent successfully. We will contact you shortly!
 							</p>
 						</div>
 					</div>
