--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
 				<a href="#" class="menu-btn"><span></span></a>
 				<div class="top-menu">
 					<ul>
-						<li><a href="/" class="btn" data-text="<< Back To Home"><< Back To Home</a></li>
+						<li><a href="https://hacktronian.in" target="_blank" class="btn" data-text=">_ HACKTRONIAN">>_ HACKTRONIAN</a></li>
 					</ul>
 				</div>
 			</div>
