--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="centrize full-width">
 			<div class="vertical-center">
 				<div class="pre-inner">
-					<div class="load typing-load"><p>>_ Loading...</p></div>
+					<div class="load typing-load"><p>Loading....................._</p></div>
 					<span class="typed-load"></span>
 				</div>
 			</div>
@@ -113,34 +113,10 @@
 								<li><strong>Job:</strong> Penetration Tester</li>
 								<li><strong>Citizenship:</strong> India</li>
 								<li><strong>Residence: </strong> Delhi</li>
-								<li><strong>Follow: </strong><a href="https://allmylinks.com/thehackingsage">https://allmylinks.com</a></li>
+								<li><strong>Social: </strong><a href="https://bit.ly/thehackingsage" target="_blank">bit.ly/thehackingsage</a></li>
 							</ul>
 						</div>
 						<div class="bts"><a href="#" class="btn" data-text="Download CV">Download CV</a></div>
-					</div>
-					<div class="clear"></div>
-				</div>
-			</div>
-
-			<!-- About Hacktronian -->
-			<div class="section about">
-				<div class="content">
-					<div class="title">
-						<div class="title_inner">About Hacktronian</div>
-					</div>
-					<div class="image">
-						<img src="images/hacktronian.png" alt="" />
-					</div>
-					<div class="desc">
-						<p>
-							Hacktronian is an online training platform which mainly focuses on providing cybersecurity education and resources for free. We also provide cybersecurity services and solutions.
-						</p>
-						<div class="info-list">
-							<ul>
-								<li><strong>Website: </strong><a href="https://hacktronian.in">https://hacktronian.in</a></li>
-								<li><strong>Follow: </strong><a href="https://allmylinks.com/hacktronian">https://allmylinks.com</a></li>
-							</ul>
-						</div>
 					</div>
 					<div class="clear"></div>
 				</div>
@@ -185,33 +161,124 @@
 			<div class="section resume" id="section-resume">
 				<div class="content">
 					<div class="cols">
-						<div class="col col-md">	
+						<div class="col col-md">
 
-							
+							<!-- Skills -->	
+							<div class="title">
+								<div class="title_inner">Skills</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>● Penetration Testing</p>
+									<p>● Linux Administration</p>
+									<p>● Network Administration</p>
+									<p>● Web Development</p>
+								</div>
+							</div>
+
+							<br><br>
+							<!-- Coding -->
+							<div class="title">
+								<div class="title_inner">Coding</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>
+										C, Python, Bash and PowerShell
+									</p>
+								</div>
+							</div>
+
+							<br><br>
+							<!-- Database -->
+							<div class="title">
+								<div class="title_inner">Database</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>
+										MySQL, SQLite, Microsoft SQL Server
+									</p>
+								</div>
+							</div>
+
+							<br><br>
+							<!-- Database -->
+							<div class="title">
+								<div class="title_inner">Administration</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>
+										Apache, SSH, Shell, GIT, Virtualization 
+									</p>
+								</div>
+							</div>
+
+							<br><br>
+							<!-- OS -->
+							<div class="title">
+								<div class="title_inner">Operating System</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>
+										Linux & Windows
+									</p>
+								</div>
+							</div>
+
+							<br><br>
+							<!-- Tools -->
+							<div class="title">
+								<div class="title_inner">Tools</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>
+										Nmap, Wireshark, Metasploit, BurpSuite, W3AF, OpenVAS, BeEF, Bloodhound, GDB, Social Engineer Toolkit etc.
+									</p>
+								</div>
+							</div>
+
+							<br><br>
+							<!-- Languages -->
+							<div class="title">
+								<div class="title_inner">Languages</div>
+							</div>
+							<div class="resume-items">
+								<div class="resume-item">
+									<p>
+										Hindi & English
+									</p>
+								</div>
+							</div>
+
+							<br><br>							
 							<!-- Experience -->
 							<div class="title">
 								<div class="title_inner">Experience</div>
-							</div>							
+							</div>
 							<div class="resume-items">
 
 								<div class="resume-item active">
-									<div class="date">Oct. 2020 - Present</div>
-									<div class="name">Hacktronian | <a href="https://hacktronian.in" target="_blank">https://hacktronian.in</a></div>
-									<p>Cyber Security Resources and Training</p>
+									<div class="date">Oct. 2020 - Present </div>
+									<div class="name">Hacktronian (Founder, Lead Trainer) </div>
+									<p>Hacktronian is an online training platform which mainly focuses on providing cybersecurity education and resources for free.<br><br><a href="https://hacktronian.in" target="_blank">https://hacktronian.in</a></p>
 
 								</div>
 
 								<div class="resume-item active">
-									<div class="date">Jan. 2019 - Oct. 2020</div>
-									<div class="name">SECARMY (InfoSec Community) | <a href="https://secarmy.org" target="_blank">https://secarmy.org</a></div>
-									<p>Head of Operations & Projects</p>
+									<div class="date">Jan. 2019 - Oct. 2020 </div>
+									<div class="name">SECARMY (Head of Operations & Projects) </div>
+									<p>SECARMY is an Indian origin agile and collective intelligence focused community full of enthusiasts from various diverse domains of information security striving their best to make a change through various open source activities like Capture The Flag (CTF), Podcasts, Blogs and various Sessions or Webcasts.<br><br><a href="https://secarmy.org" target="_blank">https://secarmy.org</a></p>
 
 								</div>
 
 								<div class="resume-item active">
-									<div class="date">Oct. 2016 - Present</div>
-									<div class="name">Freelancer | <a href="https://allmylinks.com/thehackingsage" target="_blank">https://allmylinks.com</a></div>
-									<p>In 2016, I started working as a Freelancer in which I used to provide services related to Cyber Security (Security Audit, Vulnerability Assessment and Penetration Testing) & Web Development (Web Designing, Makeover and SEO).</p>
+									<div class="date">Oct. 2016 - Present </div>
+									<div class="name">Self-Employed (Freelancer)</div>
+									<p>In 2016, I started working as a Freelancer in which I used to provide services related to Cyber Security (Security Audit, Vulnerability Assessment and Penetration Testing) & Web Development (Web Designing, Makeover and SEO).<br><br><a href="https://bit.ly/thehackingsage" target="_blank">bit.ly/thehackingsage</a></p>
 								</div>
 
 							</div>
@@ -227,84 +294,94 @@
 
 						   <!-- <div class="resume-item">
 									<div class="date">Jan. 2021</div>
-									<div class="name">Offensive Security Certified Professional (OSCP)</div>
-									<p>
-										Offensive Security (ID : XXX)
-									</p>
-
+									<div class="name">Offensive Security | <a href="#">View Certificates</a></div>
+									<p>Offensive Security Certified Professional (OSCP)</p>
 								</div> -->
 
 								<div class="resume-item">
-									<div class="date">Oct. 2018 - Oct. 2021</div>
-									<div class="name">Certified Ethical Hacker v10</div>
-									<p>
-										EC-Council (ID : ECC1635847029)
-									</p>
-
+									<div class="date">2020</div>
+									<div class="name">Autopsy | <a href="#">View Certificates</a></div>
+									<p>● Autopsy Basics and Hands On</p>
+									<p>● Intro to DFIR: The Divide and Conquer Process</p>
 								</div>
 
 								<div class="resume-item">
-									<div class="date">2017 - Present</div>
-									<div class="name">100+ Online Courses and Certifications</div>
-									<p>
-										Cybrary, Udemy, Google etc.
-									</p>
+									<div class="date">2019 - 2020</div>
+									<div class="name">Udemy | <a href="#">View Certificates</a></div>
+									<p>● Linux Server Administration Hands-on Training</p>
+									<p>● Computer Networking Masterclass</p>
+									<p>● Computer Networks Security</p>
+									<p>● Ethical Hacking - Hands-On Training</p>
+									<p>● The Complete Ethical Hacking Course</p>
+									<p>● Advanced Penetration Testing using Kali linux</p>
+									<p>● Complete WebApplication Penetration Testing</p>
+									<p>● Docker Course</p>
+									<p>● DevOps Fundamentals</p>
+									<p>● DevOps : Jenkins Docker Kubernetes GIT</p>
+									<p>● BlackArch Linux - Penetration Testing</p>
+									<p>● Social Media Markiting</p>
+									<p>● The Complete Python Hacking Course</p>
+									<p>● SQL Masterclass: SQL for Data Analytics</p>
+									<p>● The PHP Course</p>
+									<p>● Complete SQL Bootcamp with MySQL, PHP & Python</p>
+									<p>● Reverse Engineering .NET with dnSpy</p>
+									<p>● Reverse Engineering Windows GUI Programs</p>
+									<p>● Reversing x64dbg Graphical Static Analysis</p>
+									<p>● Powershell Scripting - Windows Server 2016 MCSA</p>
+									<p>● Task Automation using Windows PowerShell</p>
+									<p>● Master Wireshark 3</p>
+									<p>● Cryptography in Cyber Security</p>
+									<p>● Git & GitHub Crash Course</p>
+									<p>● The Complete Android App Development</p>
+									<p>● Android Ethical Hacking Course</p>
+									<p>● Hacking and Pentesting iOS Applications</p>
+									<p>● iOS Penetration Testing</p>
+									<p>● Complete Metasploit Course</p>
+									<p>● AWS Certified Cloud Practitioner</p>
+									<p>● Microsoft SQL Server for Beginners to Expert</p>
+									<p>● Azure DevOps and AWS DevOps Masterclass</p>
+									<p>● Google Certified Professional Cloud Developer</p>
+									<p>● IoT Internet of Things Crash Course</p>
+									<p>● Complete Backend Development</p>
+									<p>● Advanced Web Developer Course</p>
+								</div>
+
+								<div class="resume-item">
+									<div class="date">2019</div>
+									<div class="name">Cybrary | <a href="#">View Certificates</a></div>
+									<p>● Penetration Testing and Ethical Hacking</p>
+									<p>● Advanced Penetration Testing</p>
+									<p>● Comptia A Plus 901</p>
+									<p>● CompTIA Network+</p>
+									<p>● CompTIA Security+</p>
+									<p>● CompTIA CySA+</p>
+									<p>● Social Engineering and Manipulation</p>
+									<p>● Risk Management Framework</p>
+								</div>
+
+								<div class="resume-item">
+									<div class="date">2019</div>
+									<div class="name">Google | <a href="#">View Certificates</a></div>
+									<p>● Fundamentals of Digital Marketing</p>
+									<p>● Google Cloud Security Professional</p>
+									<p>● Google IT Support Professional</p>
+								</div>
+
+								<div class="resume-item">
+									<div class="date">2018 - 2021</div>
+									<div class="name">EC-Council | <a href="#">View Certificate</a></div>
+									<p>● Certified Ethical Hacker v10 (ECC1635847029)</p>
 								</div>
 
 								<div class="resume-item">
 									<div class="date">2013 - 2016</div>
-									<div class="name">B.Sc. Mathematics</div>
-									<p>
-										Dr. Ram Manohar Lohia Avadh University
-									</p>
+									<div class="name">Dr. Ram Manohar Lohia Avadh University, Ayodhya</div>
+									<p>B.Sc. Mathematics</p>
 								</div>
 
 							</div>
 						</div>						
 
-					</div>
-				</div>
-			</div>
-
-			<!-- Skills -->
-			<div class="section skills">
-				<div class="content">
-					<div class="title">
-						<div class="title_inner">Skills</div>
-					</div>
-					<div class="skills list">
-						<ul>
-							<li> 
-								<div class="name">Penetration Testing</div>
-							</li>
-							<li> 
-								<div class="name">Linux Administration</div>
-							</li>
-							<li> 
-								<div class="name">Network Administration</div>
-							</li>
-							<li> 
-								<div class="name">Web Development</div>
-							</li>
-							<li> 
-								<div class="name">Language : Hindi, English</div>
-							</li>
-							<li> 
-								<div class="name">Coding : HTML, C, Python, Bash, PowerShell, PHP</div>
-							</li>
-							<li> 
-								<div class="name">Database : MySQL, SQLite, Microsoft SQL Server</div>
-							</li>
-							<li> 
-								<div class="name">Administration : Apache, SSH, Shell, GIT, Virtualization</div>
-							</li>
-							<li> 
-								<div class="name">Operating System : Linux & Windows</div>
-							</li>
-							<li> 
-								<div class="name">Tools : Nmap, Wireshark, Metasploit Framework, BurpSuite, </div>
-							</li>
-						</ul>
 					</div>
 				</div>
 			</div>
