--- a/404.html
+++ b/404.html
@@ -1,116 +1,40 @@
+<!-- Mr.SAGE (@thehackingsage) -->
+<!-- HACKTRONIAN - https://hacktronian.in -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
-	<!-- Basic -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta charset="UTF-8">
 	<title>Error 404</title>
-	<meta name="keywords" content="thehackingsage, Mr.SAGE, Hacktronian, Vipul Tiwari, Cyber Security, Training, Projects, Services"/>
-    <meta name="description" content="Error 404"/>
-	
-	<!-- Mobile Specific Metas -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	
-	<!-- Load Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,100,300italic,300,100italic,400italic,500,500italic,700,700italic&amp;subset=latin,cyrillic' rel='stylesheet'>
-	
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/glitche-basic.css" />
-	<link rel="stylesheet" href="css/glitche-layout.css" />
-	<link rel="stylesheet" href="css/ionicons.css" />
-	<link rel="stylesheet" href="css/magnific-popup.css" />
-	<link rel="stylesheet" href="css/animate.css" />
-	<link rel="stylesheet" href="css/dark.css" />
-	<link rel="stylesheet" href="css/green.css" />
-	
-	<!-- Favicons -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/404.css">
 </head>
-
-<body class="home">	<!-- Mr.SAGE | @thehackingsage -->
-	
-	<!-- Preloader -->
-	<div class="preloader">
-		<div class="centrize full-width">
-			<div class="vertical-center">
-				<div class="pre-inner">
-					<div class="load typing-load"><p>>_ Loading...</p></div>
-					<span class="typed-load"></span>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<!-- Container -->
-	<div class="container">
-		
-		<!-- Header -->
-		<header>
-			<div class="head-top">
-				<a href="#" class="menu-btn"><span></span></a>
-				<div class="top-menu">
-					<ul>
-						<li><a href="https://hacktronian.in" target="_blank" class="btn" data-text=">_ HACKTRONIAN">>_ HACKTRONIAN</a></li>
-					</ul>
-				</div>
-			</div>
-		</header>
-		
-		<!-- Wrapper -->
-		<div class="wrapper">
-		
-			<!-- Started -->
-			<div class="section started"  id="section-home">
-				<div class="centrize full-width">
-					<div class="vertical-center">
-						<div class="started-content">
-							<div class="h-title glitch-effect" data-text="Error 404"><span>Error 404</span></div>
-							<div class="h-subtitle typing-bread">
-								<p><a href="/" class="btn" data-text="<< Back To Home"><< Back To Home</a><br><br>
-								The Page You're Trying To Access Doesn't Appear To Exist.</p>
-							</div>
-						</div>
+<body translate="no" >
+	<div id="page">
+		<div id="container">
+			<h1>:(</h1>
+			<h2>Your PC ran into a problem and needs to restart. We're just collecting some error info, and then we'll restart for you.</h2>
+			<h2><span id="percentage">0</span>% complete</h2>
+			<div id="details">
+				<div id="qr">
+					<div id="image">
+						<img src="img/qr.png" alt="QR Code" />
 					</div>
 				</div>
+				<div id="stopcode">
+					<h5 style="font-size: 16px;"><br>For more information about this issue and possible fixes, visit http://hacktronian.in/stopcode</h5>
+					<h5 style="font-size: 16px;">If you call a support person, give them this info:<br/>Stop Code: 404 PAGE NOT FOUND</h5>
+				</div>
 			</div>
-		
 		</div>
-		
-		<!-- Footer -->
-		<footer>
-			<div class="soc">
-				<a target="_blank" href="terminal/index.html"><span class="ion"> <ion-icon name="terminal-outline"></ion-icon></span></a>
-				<a target="_blank" href="https://instagram.com/thehackingsage"><span class="ion"><ion-icon name="logo-instagram"></ion-icon></span></a>
-				<a target="_blank" href="https://twitter.com/thehackingsage"><span class="ion"><ion-icon name="logo-twitter"></ion-icon></span></a>
-				<a target="_blank" href="https://github.com/thehackingsage"><span class="ion"><ion-icon name="logo-github"></ion-icon></span></a>
-				<a target="_blank" href="https://youtube.com/hacktronian?sub_confirmation=1"><span class="ion"><ion-icon name="logo-youtube"></ion-icon></span></a>
-				<a target="_blank" href="https://thehacktronian.blogspot.com"><span class="ion"><ion-icon name="globe-outline"></ion-icon></span></a>
-			</div>
-			<div class="copy">© 2020 HACKTRONIAN. All rights reserved.</div>
-			<div class="clr"></div>
-		</footer>
-		
-		<!-- Lines -->
-		<div class="line top"></div>
-		<div class="line bottom"></div>
-		<div class="line left"></div>
-		<div class="line right"></div>
-		
 	</div>
-	
-	<!-- jQuery Scripts -->
-	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-    <script src="js/jquery.min.js"></script>
-	<script src="js/jquery.validate.js"></script>
-	<script src="js/typed.js"></script>
-	<script src="js/magnific-popup.js"></script>
-	<script src="js/imagesloaded.pkgd.js"></script>
-	<script src="js/isotope.pkgd.js"></script>
-	
-	<!-- Main Scripts -->
-	<script src="js/glitche-scripts.js"></script>
-	
+	<script id="rendered-js" type="text/javascript", src="js/404.js"></script>
 </body>
-<!-- Mr.SAGE | @thehackingsage -->
 </html>
+
+<!-- Mr.SAGE (@thehackingsage) -->
+<!-- HACKTRONIAN - https://hacktronian.in -->
