--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Error 404</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,7 +22,7 @@
 			<div id="details">
 				<div id="qr">
 					<div id="image">
-						<img src="img/qr.png" alt="QR Code" />
+						<img src="images/qr.png" alt="QR Code" />
 					</div>
 				</div>
 				<div id="stopcode">
